# assistant

./: Dockerfile  Pipfile  notes.pic  pyproject.toml  requirements.txt
personal_assistant/: book_class.py  book_commands.py  help.py  input_error_handler.py  main.py  notes_commands.py  user_interface.py
