[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Dima <fialkofskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prettytable = "^3.6.0"
tabulate = "^0.9.0"
pyfiglet = "^0.8.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
